Added API endpoint for most posts
