# app/Http/Controllers/V1/UserController.php
@@ -6,7 +6,9 @@ use App\Http\Controllers\Controller;
 use App\Http\Resources\UserCollection;
 use App\Http\Resources\UserResource;
 use App\Models\User;
+use Carbon\Carbon;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\DB;
 
 class UserController extends Controller
 {
@@ -72,5 +74,55 @@ class UserController extends Controller
     public function searchByName(string $keyword)
     {
         return new UserCollection(User::where('name', 'like', '%' . $keyword . '%')->paginate());
+    }
+
+
+	/**
+	 * @OA\Get(
+	 *      path="/users/most-posted",
+	 *      tags={"Users"},
+	 *      summary="Find top 5 message posters",
+	 *      description="Returns the top 5 message posters within a given date range",
+	 *      @OA\Parameter(
+	 *          name="start_at",
+	 *          description="Start date to filter by",
+	 *          required=true,
+	 *          in="query",
+	 *          example="2022-03-20",
+	 *          @OA\Schema(
+	 *              type="string"
+	 *          )
+	 *      ),
+	 *      @OA\Parameter(
+	 *          name="end_at",
+	 *          description="End date to filter by",
+	 *          required=true,
+	 *          in="query",
+	 *          example="2022-03-27",
+	 *          @OA\Schema(
+	 *              type="string"
+	 *          )
+	 *      ),
+	 *      @OA\Response(
+	 *          response=200,
+	 *          description="List of all users who matched the search query",
+	 *       )
+	 *     )
+	 * )
+	 */
+    public function findUsersPostingTheMostMessages(Request $request)
+    {
+    	$startDate = new Carbon($request->get('start_at'));
+    	$endDate = new Carbon($request->get('end_at'));
+
+    	$rows = User::select(['users.*', DB::raw('COUNT(messages.id) AS message_count')])
+		    ->leftJoin('messages', 'users.id', '=', 'messages.user_id')
+	        ->whereBetween('messages.created_at', [$startDate, $endDate])
+	        ->groupBy('users.email')
+	        ->orderBy(DB::raw('COUNT(messages.id)'), 'DESC')
+	        ->limit(5)
+	        ->get();
+
+    	return UserResource::collection($rows);
     }
 }
